--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "dependencies": {
     "lodash": "^4.17.19",
-    "vue": "^2.6.11",
-    "vue-router": "^3.4.3",
-    "vuex": "^3.4.0"
+    "vue": "^3.0.4",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.158",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.7"
+    "typescript": "^4.1.3"
   },
   "vetur": {
     "tags": "./tags.json"
